src/objects/User.object
<CustomObject>
    <fields>
        <fullName>AUP_Business_Unit__c</fullName>
        <description>Business Unit received via. SAML JIT user provisioning gets persisted in user record. This is to assign appropriate permission sets and groups to the user at the time of login .</description>
        <inlineHelpText>Select or set appropriate business unit.</inlineHelpText>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Collections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rights Letters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Universal Console</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AUP_Change_Permissions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates login flow to trigger a Apex code that will assign necessary permission sets to user and also assign user to appropriate public groups.</description>
        <inlineHelpText>Check when user permissions need to be reset.</inlineHelpText>
        <label>Change Permissions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AUP_User_Function__c</fullName>
        <description>Picklist created for stamping the business function of a user as indicated at the time of user registration
This attribute will be used to assign appropriate permissions to user along with profiles and roles.</description>
        <inlineHelpText>Custom attribute that indicate business function performed by user</inlineHelpText>
        <label>User Function</label>
        <picklist>
            <picklistValues>
                <fullName>Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Reviewer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Coll_Racf_Id__c</fullName>
        <label>Coll Racf Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection_User_ID__c</fullName>
        <label>Collection User ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Genesys_Id__c</fullName>
        <label>Genesys Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lan_Id__c</fullName>
        <label>Lan Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Request_Service_Type__c</fullName>
        <label>Service Request Service Type</label>
        <picklist>
            <picklistValues>
                <fullName>Account Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Action Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Comment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Correspondence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet E-mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet Incoming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus Term Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Contact Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Related Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Generated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toyota Term Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Outbound</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Request_User_Group__c</fullName>
        <label>Service Request User Group</label>
        <picklist>
            <picklistValues>
                <fullName>ADM COE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Protection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Solution Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C2P System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDS System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Recovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Recovery System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO COE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collections System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate CRM Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR COE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Dispute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS COE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Loyalty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Daily System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMS System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document Control Clerk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSSO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EBPP System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Management System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPAY System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOCUS General</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Teleset_ID__c</fullName>
        <label>Teleset ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebLogin_Username__c</fullName>
        <label>WebLogin Username</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>Lan_Id__c</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator,System Administrator Clone</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>InActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>In Active Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Reqd_LANID_and_RACFID_for_Collections</fullName>
        <active>true</active>
        <description>Users in Collections Profile must have Lan Id or Coll Racf Id field values</description>
        <errorConditionFormula>AND(
  BEGINS( Profile.Name , &quot;Collections&quot;),
  OR(
    ISBLANK(Coll_Racf_Id__c),
    ISBLANK(Lan_Id__c)
  )
)</errorConditionFormula>
        <errorMessage>Users in Collections Profile must have Lan Id or Coll Racf Id field values</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_LANID_and_RACFID_for_Collections</fullName>
        <active>true</active>
        <description>Users in Collections roles must have Lan Id and Coll Racf Id field values</description>
        <errorConditionFormula>AND(
  BEGINS(UserRole.Name, &quot;Collections&quot;),
  OR(
    ISBLANK(Coll_Racf_Id__c),
    ISBLANK(Lan_Id__c)
  )
)</errorConditionFormula>
        <errorMessage>Users in Collections roles must have Lan Id and Coll Racf Id field values</errorMessage>
    </validationRules>
</CustomObject>